Add environment variable support and integrate Octokit for GitHub API
- Updated .gitignore to include environment variable files (.env, .env.local).
- Added Octokit as a dependency in package.json and package-lock.json for GitHub API interactions.
- Created a new GitHub utility module (github.ts) to fetch README data from a specified repository.
- Modified Landing component to call FetchReadme on mount, enhancing functionality.
- Adjusted image paths in Landing.css for correct background display.

--- a/src/pages/Landing.css
+++ b/src/pages/Landing.css
@@ -98,7 +98,7 @@ body {
 }
 
 .title::before {
-  background-image: url("/public/lucas-marcomini.jpg");
+  background-image: url("/lucas-marcomini.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
@@ -111,7 +111,7 @@ body {
 .title::after {
   background:
     linear-gradient(180deg, #8f4edd 70%, #532bdc 100%),
-    url("/public/lucas-marcomini.jpg");
+    url("/lucas-marcomini.jpg");
   background-size: cover;
   background-position: 50% 50%;
   background-repeat: no-repeat;
